# jq

./: CMakeLists.txt  Makefile.am  jqversion.cmake  tocstring.cmake
.devcontainer/: devcontainer.json
src/: builtin.c  compile.c  inject_errors.c  jq_test.c  jv_alloc.c  jv_alloc.h  jv_file.c  lexer.c  lexer.h  linker.c  main.c  util.c
